# LinguaFoundry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
docs/: architecture.md  development-process.md  development.md  future-backlog.md  mvp-smoke-scenario.md  pull-request-rules.md  testing.md
docs/adr/: 0001-baseline-application-architecture.md  README.md  template.md
services/: __init__.py
services/api/: Dockerfile  README.md  __init__.py  alembic.ini  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_learning_sessions_review_state.py  (+1 more)
services/api/app/: __init__.py  config.py  dependencies.py  lang_packs.py  logging.py  main.py
services/api/tests/: test_health.py  test_lang_pack_wiring.py  test_lang_packs.py  test_learning.py  test_logging.py  test_migrations.py  test_mvp_contract.py  test_mvp_integration.py  test_mvp_smoke_contract.py
services/bot/: Dockerfile  README.md  __init__.py  app.py  lesson_catalog.py  lesson_flow.py  review.py
services/bot/app/: __init__.py  adapter.py  api_client.py  config.py  main.py  telegram.py
services/bot/tests/: test_adapter.py  test_api_client.py  test_lesson_flow.py  test_main.py  test_review_command.py
tests/: test_infrastructure_contract.py  test_lang_pack_update_policy_docs.py  test_learning_flow_docs.py
tests/core/: test_models.py
(+7 files in other folders)
