[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "linguafoundry"
version = "0.1.0"
description = "Modular language learning platform scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic-settings>=2,<3",
    "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
