[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "linguafoundry"
version = "0.1.0"
description = "Modular language learning platform scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi>=0.115,<1",
    "jsonschema>=4.22,<5",
    "pydantic-settings>=2,<3",
    "SQLAlchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools.packages.find]
where = [".", "packages/core"]
include = ["services*", "linguafoundry_core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
